# csfd_top_300_example_app

./: .gitignore  README.md  movies.db  pyproject.toml
src/: config.py  db.py  models.py  parser.py  scraper.py  scraper_cli.py  services.py  typedefs.py  web.py
src/templates/: _actors.html  _movies.html  actor.html  base.html  index.html  movie.html
test/: conftest.py  test_parser.py
test/fixtures/: movie_page.html  top_page.html
